Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/invalidos_semantico/test1.ajs
let a: boolean;

a = 3;


let b = tr;

if(b<3){
    a = 2;
}
